# jc

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  jc.go  jcbzip2.go  jcgzip.go  jclogger.go  jctar.go  jcxz.go
.github/workflows/: pr-check.yml  release.yml
docs/: jc_sdd.md  jc_srs.md  jcz_sdd.md  jcz_srs.md
jcgzip/: jcgzip.go
jclogger/: jclogger.go
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs  mod.rs
src/compressors/: bzip2.rs  gzip.rs  mod.rs  tar.rs  xz.rs
src/core/: compressor.rs  config.rs  error.rs  mod.rs  types.rs
src/operations/: collection.rs  compound.rs  compress.rs  decompress.rs  mod.rs
src/utils/: fs.rs  logger.rs  mod.rs  prompt.rs  timestamp.rs  validation.rs
tests/: README.md  test_bzip2.rs  test_compound.rs  test_compression.rs  test_decompression.rs  test_errors.rs  test_gzip.rs  test_options.rs  test_tar.rs  test_xz.rs
tests/common/: mod.rs
tool/: jcmain.go
